--- a/web/templates/web/index.html
+++ b/web/templates/web/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-    主页
+    富贵平安的主页
 {% endblock %}
 {% block blog-title %}
     <div class="blog-header">
