--- a/web/templates/web/content.html
+++ b/web/templates/web/content.html
@@ -31,7 +31,7 @@
 {#{% endblock %}#}
 {% block content %}
 
-    <div class="col-md-9 blog-main">
+    <div class="col-sm-9 blog-main">
         <textarea style="display: none;" id="content">{{ blog.content }}</textarea>
         <div class="blog-post">
             {#        <h2 class="blog-post-title" style="font-size: 40px; margin-top: 20px;">{{ blog.title }}</h2>#}
