增加redis连接，分页功能开发中

--- a/web/templates/web/content.html
+++ b/web/templates/web/content.html
@@ -24,11 +24,11 @@
     <hr>
 {% endblock %}
 
-{#{% block sidebar %}#}
-{#    <div id="sidebar">#}
-{#        <div id="custom-toc-container"></div>#}
-{#    </div>#}
-{#{% endblock %}#}
+{% block sidebar %}
+    <div id="sidebar">
+        <div id="custom-toc-container"></div>
+    </div>
+{% endblock %}
 {% block content %}
 
     <div class="col-sm-9 blog-main">
