--- a/static/css/content_toc.css
+++ b/static/css/content_toc.css
@@ -1,14 +1,14 @@
 #sidebar {
     width: 15%;
-    height: 80%;
+    height: 70%;
     position: fixed;
-    top: 50px;
-    left: 0;
+    top: 10%;
+    left: 8%;
     overflow: hidden;
     background: #fff;
     z-index: 1;
     padding: 18px;
-    border: 1px solid #ddd;
+    border-right: none;
     border-top: none;
     border-bottom: none;
     scrollbar-face-color: #889B9F;
