--- a/web/templates/web/content.html
+++ b/web/templates/web/content.html
@@ -25,8 +25,10 @@
 {% endblock %}
 
 {% block sidebar %}
-    <div id="sidebar">
-        <div id="custom-toc-container"></div>
+    <div id="sidebar" class="">
+
+        <div id="custom-toc-container" class=""></div>
+
     </div>
 {% endblock %}
 {% block content %}
@@ -39,7 +41,55 @@
             <div id="test-editormd-view"></div>
             {#        <p class="blog-post-meta" >{{ blog.publish_time }}</p>#}
         </div>
+        {#        <hr>#}
+        <div id="comments">
+            <h3>评论</h3>
+            <hr>
+            <div class="panel panel-default">
+                {#                <div class="panel-heading"><h3 class="panel-title">1#</h3></div>#}
+                <div class="panel-body" style="font-size: 15px;">
+                    好文章要顶！
+                </div>
+                <div class="panel-footer" style="font-size: 8px;">帆帆-2022-05-17</div>
+            </div>
+            <div class="panel panel-default">
+                {#                <div class="panel-heading"><h3 class="panel-title">1#</h3></div>#}
+                <div class="panel-body" style="font-size: 15px;">
+                    好文章要顶！
+                </div>
+                <div class="panel-footer" style="font-size: 8px;">帆帆-2022-05-17</div>
+            </div>
+        </div>
+
+        <div id="comment_form_container">
+            <h3>发表评论</h3>
+            <div>
+                <form class="form-inline">
+                    <div class="form-group">
+                        <label for="name">昵称</label>
+                        <input type="text" class="form-control" id="name" placeholder="昵称">
+                    </div>
+                    <br>
+                        <textarea class="form-control" rows="3" cols="90"></textarea>
+                    <button type="submit" class="btn btn-default">提交</button>
+                </form>
+            </div>
+
+
+        </div>
+        {#        <form class="form-inline">#}
+        {#            <div class="form-group">#}
+        {#                <label for="exampleInputName2">Name</label>#}
+        {#                <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">#}
+        {#            </div>#}
+        {#            <div class="form-group">#}
+        {#                <label for="exampleInputEmail2">Email</label>#}
+        {#                <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">#}
+        {#            </div>#}
+        {#            <button type="submit" class="btn btn-default">Send invitation</button>#}
+        {#        </form>#}
     </div>
+
 {% endblock %}
 
 {% block js %}
