--- a/static/css/content_toc.css
+++ b/static/css/content_toc.css
@@ -1,12 +1,12 @@
 #sidebar {
-    width: 15%;
-    height: 70%;
+    width: 0;
+    height: 0;
     position: fixed;
     top: 10%;
     left: 8%;
     overflow: hidden;
     background: #fff;
-    z-index: 1;
+    /*z-index: 1;*/
     padding: 18px;
     border-right: none;
     border-top: none;
