--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load sidebar %}
+{% load login_info %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,10 +28,13 @@
     <div class="container">
         <nav class="blog-nav">
             <a class="blog-nav-item active" href="/">主页</a>
-            <a class="blog-nav-item" href="#">个人网盘</a>
+{#            <a class="blog-nav-item" href="#">个人网盘</a>#}
             {#            <a class="blog-nav-item" href="#">Press</a>#}
             {#            <a class="blog-nav-item" href="#">New hires</a>#}
             <a class="blog-nav-item" href="#">关于</a>
+{#            <a href="#" class="btn btn-primary" style="float: right;">注册</a>#}
+            {% userinfo request %}
+
         </nav>
     </div>
 </div>
