--- a/web/templates/web/content.html
+++ b/web/templates/web/content.html
@@ -66,10 +66,10 @@
             <div>
                 <form method="post">
                     {% csrf_token %}
-                    <div class="form-group">
-                        <label for="name">昵称</label>
-                        <input type="text" class="form-control" id="name" placeholder="昵称" name="name">
-                    </div>
+{#                    <div class="form-group">#}
+{#                        <label for="name">昵称</label>#}
+{#                        <input type="text" class="form-control" id="name" placeholder="昵称" name="name">#}
+{#                    </div>#}
                     <div class="form-group">
                         <textarea class="form-control" rows="5" name="content"></textarea>
                     </div>
