--- a/web/templates/web/info.html
+++ b/web/templates/web/info.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+    信息
+{% endblock %}
 {% block extracss %}
     <link rel="stylesheet" href="/static/css/message.css"/>
 {% endblock %}
