--- a/web/templates/web/forget.html
+++ b/web/templates/web/forget.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
-{% block title %}
-    登录
-{% endblock %}
 {% block extracss %}
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 {% endblock %}
+{% block title %}
+    忘记密码
+{% endblock %}
+
 {% block content %}
     <div class="doc-container" id="doc-container">
         <div class="container-fixed">
@@ -14,30 +15,20 @@
                         {% csrf_token %}
                         <div class="modal-header">
 
-                            <h4 class="modal-title text-center" id="myModalLabel">登录</h4>
+                            <h4 class="modal-title text-center" id="myModalLabel">忘记密码</h4>
                         </div>
                         <div class="modal-body" id="model-body">
-
-
                             <div class="form-group">
-                                <label for="username">用户名：</label>
-                                {{ form.username }}
-                                <span>{{ form.username.errors.0 }}</span>
+                                <label for="username">{{ text }}：</label>
+                                <input type="text" name="text" required class="form-control">
                             </div>
-                            <div class="form-group">
-                                <label for="password">密码：</label>
-                                {{ form.password }}
-                                <span>{{ form.password.errors.0 }}</span>
-                            </div>
-                            {{ error }}
                         </div>
                         <div class="modal-footer">
                             <div class="form-group">
-                                <button class="btn btn-primary form-control">登录</button>
+                                <button class="btn btn-primary form-control">提交</button>
                             </div>
                             <div class="form-group">
-                                <a href="{% url "register" %}" class="btn btn-default form-control">注册</a>
-                                <a href="{% url "forget" %}" class="btn btn-default form-control">忘记密码</a>
+                                <a href="{% url "login" %}" class="btn btn-default form-control">登录</a>
                             </div>
                         </div>
                     </form><!-- /.modal-content -->
