--- a/web/templates/web/read.html
+++ b/web/templates/web/read.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-
+{% block title %}
+    {{ blog.title }}
+{% endblock %}
 {% block extracss %}
     <link rel="stylesheet" href="/static/css/editormd.css"/>
     <link rel="stylesheet" href="/static/css/content_toc.css"/>
@@ -89,15 +91,15 @@
                                     <li class="zoomIn article">
                                         <div class="comment-parent">
                                         <a name="remark-1"></a>
-{#                                        <img src="http://qzapp.qlogo.cn/qzapp/101871412/EE7AAE629D162B783C00149B4EDE3502/100"/>#}
+                                        <img src="/{{    comment.user.avatar }}"/>
                                         <div class="info">
-                                            <span class="username">{{ comment.name }}</span>
+                                            <span class="username">{{ comment.user.username }}</span>
                                         </div>
                                         <div class="comment-content">
                                             {{ comment.content }}
                                         </div>
                                         <p class="info info-footer">
-                                            <i class="fa fa-times-circle-o" aria-hidden="true"></i>
+                                            <i class="fa fa-clock-o" aria-hidden="true"></i>
 {#                                            <span>深圳</span>#}
                                             <span class="comment-time">{{ comment.publish_time }}</span>
 {#                                            <a href="javascript:;" class="btn-reply" data-targetid="1"#}
