--- a/web/templates/web/register.html
+++ b/web/templates/web/register.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+    注册
+{% endblock %}
 {% block extracss %}
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 {% endblock %}
